Migrated to Quarkus 3